crates/parser/tests/parse/memory-malformed.snap
---
source: crates/parser/tests/parse.rs
---
ROOT@0..212
  MODULE@0..211
    L_PAREN@0..1 "("
    KEYWORD@1..7 "module"
    WHITESPACE@7..10 "\n  "
    MODULE_FIELD_MEMORY@10..18
      L_PAREN@10..11 "("
      KEYWORD@11..17 "memory"
      R_PAREN@17..18 ")"
    WHITESPACE@18..21 "\n  "
    MODULE_FIELD_MEMORY@21..32
      L_PAREN@21..22 "("
      KEYWORD@22..28 "memory"
      WHITESPACE@28..29 " "
      ERROR@29..31 "\"\""
      R_PAREN@31..32 ")"
    WHITESPACE@32..35 "\n  "
    MODULE_FIELD_MEMORY@35..46
      L_PAREN@35..36 "("
      KEYWORD@36..42 "memory"
      WHITESPACE@42..43 " "
      ERROR@43..44 "("
      ERROR@44..45 ")"
      R_PAREN@45..46 ")"
    WHITESPACE@46..49 "\n  "
    MODULE_FIELD_MEMORY@49..63
      L_PAREN@49..50 "("
      KEYWORD@50..56 "memory"
      WHITESPACE@56..57 " "
      MEM_TYPE@57..62
        ADDR_TYPE@57..60
          ERROR@57..60 "f32"
        WHITESPACE@60..61 " "
        LIMITS@61..62
          UNSIGNED_INT@61..62 "0"
      R_PAREN@62..63 ")"
    WHITESPACE@63..66 "\n  "
    MODULE_FIELD_MEMORY@66..78
      L_PAREN@66..67 "("
      KEYWORD@67..73 "memory"
      WHITESPACE@73..74 " "
      ERROR@74..77 "i32"
      R_PAREN@77..78 ")"
    WHITESPACE@78..81 "\n  "
    MODULE_FIELD_MEMORY@81..103
      L_PAREN@81..82 "("
      KEYWORD@82..88 "memory"
      WHITESPACE@88..89 " "
      MEM_TYPE@89..90
        LIMITS@89..90
          UNSIGNED_INT@89..90 "0"
      WHITESPACE@90..91 " "
      ERROR@91..92 "("
      ERROR@92..99 "pagesiz"
      WHITESPACE@99..100 " "
      ERROR@100..101 "1"
      ERROR@101..102 ")"
      R_PAREN@102..103 ")"
    WHITESPACE@103..106 "\n  "
    MODULE_FIELD_MEMORY@106..127
      L_PAREN@106..107 "("
      KEYWORD@107..113 "memory"
      WHITESPACE@113..114 " "
      MEM_TYPE@114..126
        LIMITS@114..115
          UNSIGNED_INT@114..115 "0"
        WHITESPACE@115..116 " "
        MEM_PAGE_SIZE@116..126
          L_PAREN@116..117 "("
          KEYWORD@117..125 "pagesize"
          R_PAREN@125..126 ")"
      R_PAREN@126..127 ")"
    WHITESPACE@127..130 "\n  "
    MODULE_FIELD_MEMORY@130..154
      L_PAREN@130..131 "("
      KEYWORD@131..137 "memory"
      WHITESPACE@137..138 " "
      MEM_TYPE@138..153
        LIMITS@138..139
          UNSIGNED_INT@138..139 "0"
        WHITESPACE@139..140 " "
        MEM_PAGE_SIZE@140..153
          L_PAREN@140..141 "("
          KEYWORD@141..149 "pagesize"
          WHITESPACE@149..150 " "
          ERROR@150..152 "$1"
          R_PAREN@152..153 ")"
      R_PAREN@153..154 ")"
    WHITESPACE@154..157 "\n  "
    MODULE_FIELD_MEMORY@157..175
      L_PAREN@157..158 "("
      KEYWORD@158..164 "memory"
      WHITESPACE@164..165 " "
      MEM_TYPE@165..168
        LIMITS@165..168
          UNSIGNED_INT@165..166 "0"
          WHITESPACE@166..167 " "
          UNSIGNED_INT@167..168 "1"
      WHITESPACE@168..169 " "
      ERROR@169..174 "share"
      R_PAREN@174..175 ")"
    WHITESPACE@175..178 "\n  "
    MODULE_FIELD_MEMORY@178..209
      L_PAREN@178..179 "("
      KEYWORD@179..185 "memory"
      WHITESPACE@185..186 " "
      MEM_TYPE@186..189
        LIMITS@186..189
          UNSIGNED_INT@186..187 "0"
          WHITESPACE@187..188 " "
          UNSIGNED_INT@188..189 "1"
      WHITESPACE@189..190 " "
      ERROR@190..195 "share"
      WHITESPACE@195..196 " "
      ERROR@196..197 "("
      ERROR@197..205 "pagesize"
      WHITESPACE@205..206 " "
      ERROR@206..207 "1"
      ERROR@207..208 ")"
      R_PAREN@208..209 ")"
    WHITESPACE@209..210 "\n"
    R_PAREN@210..211 ")"
  WHITESPACE@211..212 "\n"

error: expected memory type
  ┌─ memory-malformed.wat:2:10
  │
2 │   (memory)
  │          ^

error: expected unsigned integer
  ┌─ memory-malformed.wat:3:11
  │
3 │   (memory "")
  │           ^^

error: unexpected token
  ┌─ memory-malformed.wat:4:12
  │
4 │   (memory ())
  │            ^

error: invalid address type
  ┌─ memory-malformed.wat:5:11
  │
5 │   (memory f32 0)
  │           ^^^

error: unexpected token
  ┌─ memory-malformed.wat:6:11
  │
6 │   (memory i32)
  │           ^^^

error: unexpected token
  ┌─ memory-malformed.wat:7:14
  │
7 │   (memory 0 (pagesiz 1))
  │              ^^^^^^^

error: unexpected token
  ┌─ memory-malformed.wat:7:22
  │
7 │   (memory 0 (pagesiz 1))
  │                      ^

error: unexpected token
  ┌─ memory-malformed.wat:7:23
  │
7 │   (memory 0 (pagesiz 1))
  │                       ^

error: expected unsigned integer
  ┌─ memory-malformed.wat:8:22
  │
8 │   (memory 0 (pagesize))
  │                      ^

error: expected unsigned integer
  ┌─ memory-malformed.wat:9:23
  │
9 │   (memory 0 (pagesize $1))
  │                       ^^

error: expected unsigned integer
  ┌─ memory-malformed.wat:9:25
  │
9 │   (memory 0 (pagesize $1))
  │                         ^

error: expected share keyword to be `shared` or `unshared`
   ┌─ memory-malformed.wat:10:15
   │
10 │   (memory 0 1 share)
   │               ^^^^^

error: expected share keyword to be `shared` or `unshared`
   ┌─ memory-malformed.wat:11:15
   │
11 │   (memory 0 1 share (pagesize 1))
   │               ^^^^^

error: unexpected token
   ┌─ memory-malformed.wat:11:22
   │
11 │   (memory 0 1 share (pagesize 1))
   │                      ^^^^^^^^

error: unexpected token
   ┌─ memory-malformed.wat:11:31
   │
11 │   (memory 0 1 share (pagesize 1))
   │                               ^

error: unexpected token
   ┌─ memory-malformed.wat:11:32
   │
11 │   (memory 0 1 share (pagesize 1))
   │                                ^
